feat: implement basic component and style for team page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,7 @@
   },
   "TEAM": {
     "MENU_ITEM": "Team",
-    "REMOVE_ME": "team page!"
+    "OUR_TEAM": "Our Team"
   },
   "WORKLOG": {
     "MENU_ITEM": "Worklog",
