Revert "Merge branch 'develop' into authors-list"
This reverts commit 7c4e8a02b48cf63c6ad96a71f8d6eeca937b2d88, reversing
changes made to 29754ebe7934ccfdebed90be7d0478b6bfe4306b.

--- a/src/assets/i18n/by.json
+++ b/src/assets/i18n/by.json
@@ -6,7 +6,7 @@
   },
   "ARCHITECTS": {
     "MENU_ITEM": "Архитекторы",
-    "FILTER": "Поиск"
+    "REMOVE_ME": "author-full-view page!"
   },
   "TEAM": {
     "MENU_ITEM": "Команда",
