--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
   },
   "ARCHITECTS": {
     "MENU_ITEM": "Architects",
-    "FILTER": "Filter"
+    "REMOVE_ME": "author-full-view page!"
   },
   "TEAM": {
     "MENU_ITEM": "Team",
