--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -6,7 +6,7 @@
   },
   "ARCHITECTS": {
     "MENU_ITEM": "Архитекторы",
-    "REMOVE_ME": "author-full-view page!"
+    "FILTER": "Поиск"
   },
   "TEAM": {
     "MENU_ITEM": "Команда",
