--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,9 @@
     "MENU_ITEM": "Architects",
     "FILTER": "Filter"
   },
+  "ARCHITECT": {
+    "BIOGRAPHY": "Biography"
+  },
   "TEAM": {
     "MENU_ITEM": "Team",
     "REMOVE_ME": "team page!"
