--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -8,6 +8,9 @@
     "MENU_ITEM": "Архитекторы",
     "FILTER": "Поиск"
   },
+  "ARCHITECT": {
+    "BIOGRAPHY": "Биография"
+  },
   "TEAM": {
     "MENU_ITEM": "Команда",
     "REMOVE_ME": "team page!"
