--- a/src/assets/i18n/by.json
+++ b/src/assets/i18n/by.json
@@ -3,10 +3,10 @@
     "HOME": "Галоўная",
     "CULTURE_PORTAL": "Культурны Партал",
     "ARCHITECTS_OF_BELARUS": "Беларускія Архітэктары",
-    "ARCHITECT_OF_THE_DAY": "Архитэктар дня"
+    "ARCHITECT_OF_THE_DAY": "Архітэктар дня"
   },
   "ARCHITECTS": {
-    "MENU_ITEM": "Архитэктары",
+    "MENU_ITEM": "Архітэктары",
     "FILTER": "Пошук",
     "MORE": "Падрабязна"
   },
