--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,12 @@
     "MORE": "More"
   },
   "ARCHITECT": {
-    "BIOGRAPHY": "Biography"
+    "BIOGRAPHY": "Biography",
+    "MASTERPIECES": "Masterpieces",
+    "WORK": "Work",
+    "DATE": "Date",
+    "VIDEO": "Video",
+    "WATCH_VIDEO": "Watch video"
   },
   "TEAM": {
     "MENU_ITEM": "Team",
