--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -11,7 +11,12 @@
     "MORE": "Подробнее"
   },
   "ARCHITECT": {
-    "BIOGRAPHY": "Биография"
+    "BIOGRAPHY": "Биография",
+    "MASTERPIECES": "Шедевры",
+    "WORK": "Произведение",
+    "DATE": "Дата",
+    "VIDEO": "Видео",
+    "WATCH_VIDEO": "Смотреть видео"
   },
   "TEAM": {
     "MENU_ITEM": "Команда",
