--- a/src/assets/i18n/by.json
+++ b/src/assets/i18n/by.json
@@ -16,7 +16,8 @@
     "WORK": "Твор",
     "DATE": "Дата",
     "VIDEO": "Відэа",
-    "WATCH_VIDEO": "Глядзець відэа"
+    "WATCH_VIDEO": "Глядзець відэа",
+    "GALLERY": "Галерэя"
   },
   "TEAM": {
     "MENU_ITEM": "Каманда",
