--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,7 +16,8 @@
     "WORK": "Work",
     "DATE": "Date",
     "VIDEO": "Video",
-    "WATCH_VIDEO": "Watch video"
+    "WATCH_VIDEO": "Watch video",
+    "GALLERY": "Gallery"
   },
   "TEAM": {
     "MENU_ITEM": "Team",
