--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -16,7 +16,8 @@
     "WORK": "Произведение",
     "DATE": "Дата",
     "VIDEO": "Видео",
-    "WATCH_VIDEO": "Смотреть видео"
+    "WATCH_VIDEO": "Смотреть видео",
+    "GALLERY": "Галерея"
   },
   "TEAM": {
     "MENU_ITEM": "Команда",
