feat: portal description, hovers

--- a/src/assets/i18n/by.json
+++ b/src/assets/i18n/by.json
@@ -3,7 +3,9 @@
     "HOME": "Галоўная",
     "CULTURE_PORTAL": "Культурны Партал",
     "ARCHITECTS_OF_BELARUS": "Беларускія Архітэктары",
-    "ARCHITECT_OF_THE_DAY": "Архітэктар дня"
+    "ARCHITECT_OF_THE_DAY": "Архітэктар дня",
+    "HEAD": "Дадзены партал прысвечаны архітэктарам Беларусі",
+    "DESCRIPTION": "Як від мастацтва архітэктура ўваходзіць у сферу духоўнай і матэрыяльнай культуры. У адрозненне ад ўтылітарнага будаўніцтва і эстэтычнай дзейнасці, напрыклад дызайну, архітэктура як мастацтва вырашае мастацка-вобразныя задачы, то ёсць выказвае ў мастацкіх вобразах ўяўленні чалавека аб прасторы і часе і месцы чалавека ў навакольным свеце."
   },
   "ARCHITECTS": {
     "MENU_ITEM": "Архітэктары",
