--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -3,7 +3,9 @@
     "HOME": "Главная",
     "CULTURE_PORTAL": "Культурный Портал",
     "ARCHITECTS_OF_BELARUS": "Белорусские Архитекторы",
-    "ARCHITECT_OF_THE_DAY": "Архитектор дня"
+    "ARCHITECT_OF_THE_DAY": "Архитектор дня",
+    "HEAD": "Данный портал посвящен архитекторам Беларуси",
+    "DESCRIPTION": "Как вид искусства архитектура входит в сферу духовной и материальной культуры. В отличие от утилитарного строительства и эстетической деятельности, например дизайна, архитектура как искусство решает художественно-образные задачи, то есть выражает в художественных образах представления человека о пространстве и времени и месте человека в окружающем мире."
   },
   "ARCHITECTS": {
     "MENU_ITEM": "Архитекторы",
